parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> import labels module options
Rule 2     nil -> <empty>
Rule 3     import -> IMPORT ID
Rule 4     labels -> LABELS labellist ENDLABELS
Rule 5     module -> MODULE automata ENDMODULE
Rule 6     options -> OPTIONS optionlist ENDOPTIONS
Rule 7     options -> nil
Rule 8     optionlist -> option
Rule 9     optionlist -> option optionlist
Rule 10    optionlist -> nil
Rule 11    option -> OPTCONDEFFECTS SEMICOLON
Rule 12    labellist -> cmd
Rule 13    labellist -> cmd COMMA labellist
Rule 14    labellist -> nil
Rule 15    cmd -> ID COLON OPENLIST act_or_pred_list CLOSELIST
Rule 16    act_or_pred_list -> act_or_pred
Rule 17    act_or_pred_list -> act_or_pred AND act_or_pred_list
Rule 18    act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
Rule 19    act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
Rule 20    act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
Rule 21    param_dec -> ID
Rule 22    param_dec -> ID COMMA param_dec
Rule 23    param_dec -> nil
Rule 24    automata -> state_dec_wrapper cond_dec_wrapper trel
Rule 25    automata -> state_dec_wrapper trel
Rule 26    automata -> nil
Rule 27    cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON
Rule 28    cond_dec -> INT COLON ID
Rule 29    cond_dec -> INT COLON INIT
Rule 30    cond_dec -> INT COLON ID COMMA cond_dec
Rule 31    cond_dec -> INT COLON INIT COMMA cond_dec
Rule 32    cond_dec -> nil
Rule 33    state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON
Rule 34    state_dec -> INT COLON ID
Rule 35    state_dec -> INT COLON INIT
Rule 36    state_dec -> INT COLON ID COMMA state_dec
Rule 37    state_dec -> INT COLON INIT COMMA state_dec
Rule 38    state_dec -> nil
Rule 39    trel -> event boolexp ARROW boolexp SEMICOLON trel
Rule 40    trel -> nil
Rule 41    event -> OPENLIST CLOSELIST
Rule 42    event -> OPENLIST ID CLOSELIST
Rule 43    boolexp -> boolexp AND boolexp
Rule 44    boolexp -> GUARD EQUAL ID
Rule 45    boolexp -> GUARD EQUAL INT
Rule 46    boolexp -> INT
Rule 47    boolexp -> nil

Terminals, with rules where they appear

ACTION               : 18
AND                  : 17 43
ARROW                : 39
CLOSELIST            : 15 18 19 20 27 33 41 42
COLON                : 15 18 18 19 19 20 20 27 28 29 30 31 33 34 35 36 37
COMMA                : 13 18 19 20 22 30 31 36 37
ENDLABELS            : 4
ENDMODULE            : 5
ENDOPTIONS           : 6
EQUAL                : 44 45
GUARD                : 27 44 45
ID                   : 3 15 18 19 20 21 22 28 30 34 36 42 44
IMPORT               : 3
INIT                 : 29 31 35 37
INT                  : 28 29 30 31 34 35 36 37 45 46
LABELS               : 4
MODULE               : 5
NOT                  : 20
OPENLIST             : 15 18 19 20 27 33 41 42
OPTCONDEFFECTS       : 11
OPTIONS              : 6
PARAMS               : 18 19 20
PREDICATE            : 19 20
SEMICOLON            : 11 27 33 39
ST                   : 33
error                : 

Nonterminals, with rules where they appear

act_or_pred          : 16 17
act_or_pred_list     : 15 17
automata             : 5
boolexp              : 39 39 43 43
cmd                  : 12 13
cond_dec             : 27 30 31
cond_dec_wrapper     : 24
event                : 39
import               : 1
labellist            : 4 13
labels               : 1
module               : 1
nil                  : 7 10 14 23 26 32 38 40 47
option               : 8 9
optionlist           : 6 9
options              : 1
param_dec            : 18 19 20 22
program              : 0
state_dec            : 33 36 37
state_dec_wrapper    : 24 25
trel                 : 24 25 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . import labels module options
    (3) import -> . IMPORT ID

    IMPORT          shift and go to state 3

    program                        shift and go to state 1
    import                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> import . labels module options
    (4) labels -> . LABELS labellist ENDLABELS

    LABELS          shift and go to state 5

    labels                         shift and go to state 4

state 3

    (3) import -> IMPORT . ID

    ID              shift and go to state 6


state 4

    (1) program -> import labels . module options
    (5) module -> . MODULE automata ENDMODULE

    MODULE          shift and go to state 8

    module                         shift and go to state 7

state 5

    (4) labels -> LABELS . labellist ENDLABELS
    (12) labellist -> . cmd
    (13) labellist -> . cmd COMMA labellist
    (14) labellist -> . nil
    (15) cmd -> . ID COLON OPENLIST act_or_pred_list CLOSELIST
    (2) nil -> .

    ID              shift and go to state 12
    ENDLABELS       reduce using rule 2 (nil -> .)

    labellist                      shift and go to state 9
    cmd                            shift and go to state 10
    nil                            shift and go to state 11

state 6

    (3) import -> IMPORT ID .

    LABELS          reduce using rule 3 (import -> IMPORT ID .)


state 7

    (1) program -> import labels module . options
    (6) options -> . OPTIONS optionlist ENDOPTIONS
    (7) options -> . nil
    (2) nil -> .

    OPTIONS         shift and go to state 14
    $end            reduce using rule 2 (nil -> .)

    options                        shift and go to state 13
    nil                            shift and go to state 15

state 8

    (5) module -> MODULE . automata ENDMODULE
    (24) automata -> . state_dec_wrapper cond_dec_wrapper trel
    (25) automata -> . state_dec_wrapper trel
    (26) automata -> . nil
    (33) state_dec_wrapper -> . ST COLON OPENLIST state_dec CLOSELIST SEMICOLON
    (2) nil -> .

    ST              shift and go to state 19
    ENDMODULE       reduce using rule 2 (nil -> .)

    automata                       shift and go to state 16
    state_dec_wrapper              shift and go to state 17
    nil                            shift and go to state 18

state 9

    (4) labels -> LABELS labellist . ENDLABELS

    ENDLABELS       shift and go to state 20


state 10

    (12) labellist -> cmd .
    (13) labellist -> cmd . COMMA labellist

    ENDLABELS       reduce using rule 12 (labellist -> cmd .)
    COMMA           shift and go to state 21


state 11

    (14) labellist -> nil .

    ENDLABELS       reduce using rule 14 (labellist -> nil .)


state 12

    (15) cmd -> ID . COLON OPENLIST act_or_pred_list CLOSELIST

    COLON           shift and go to state 22


state 13

    (1) program -> import labels module options .

    $end            reduce using rule 1 (program -> import labels module options .)


state 14

    (6) options -> OPTIONS . optionlist ENDOPTIONS
    (8) optionlist -> . option
    (9) optionlist -> . option optionlist
    (10) optionlist -> . nil
    (11) option -> . OPTCONDEFFECTS SEMICOLON
    (2) nil -> .

    OPTCONDEFFECTS  shift and go to state 26
    ENDOPTIONS      reduce using rule 2 (nil -> .)

    optionlist                     shift and go to state 23
    option                         shift and go to state 24
    nil                            shift and go to state 25

state 15

    (7) options -> nil .

    $end            reduce using rule 7 (options -> nil .)


state 16

    (5) module -> MODULE automata . ENDMODULE

    ENDMODULE       shift and go to state 27


state 17

    (24) automata -> state_dec_wrapper . cond_dec_wrapper trel
    (25) automata -> state_dec_wrapper . trel
    (27) cond_dec_wrapper -> . GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON
    (39) trel -> . event boolexp ARROW boolexp SEMICOLON trel
    (40) trel -> . nil
    (41) event -> . OPENLIST CLOSELIST
    (42) event -> . OPENLIST ID CLOSELIST
    (2) nil -> .

    GUARD           shift and go to state 30
    OPENLIST        shift and go to state 31
    ENDMODULE       reduce using rule 2 (nil -> .)

    cond_dec_wrapper               shift and go to state 28
    trel                           shift and go to state 29
    event                          shift and go to state 32
    nil                            shift and go to state 33

state 18

    (26) automata -> nil .

    ENDMODULE       reduce using rule 26 (automata -> nil .)


state 19

    (33) state_dec_wrapper -> ST . COLON OPENLIST state_dec CLOSELIST SEMICOLON

    COLON           shift and go to state 34


state 20

    (4) labels -> LABELS labellist ENDLABELS .

    MODULE          reduce using rule 4 (labels -> LABELS labellist ENDLABELS .)


state 21

    (13) labellist -> cmd COMMA . labellist
    (12) labellist -> . cmd
    (13) labellist -> . cmd COMMA labellist
    (14) labellist -> . nil
    (15) cmd -> . ID COLON OPENLIST act_or_pred_list CLOSELIST
    (2) nil -> .

    ID              shift and go to state 12
    ENDLABELS       reduce using rule 2 (nil -> .)

    cmd                            shift and go to state 10
    labellist                      shift and go to state 35
    nil                            shift and go to state 11

state 22

    (15) cmd -> ID COLON . OPENLIST act_or_pred_list CLOSELIST

    OPENLIST        shift and go to state 36


state 23

    (6) options -> OPTIONS optionlist . ENDOPTIONS

    ENDOPTIONS      shift and go to state 37


state 24

    (8) optionlist -> option .
    (9) optionlist -> option . optionlist
    (8) optionlist -> . option
    (9) optionlist -> . option optionlist
    (10) optionlist -> . nil
    (11) option -> . OPTCONDEFFECTS SEMICOLON
    (2) nil -> .

  ! reduce/reduce conflict for ENDOPTIONS resolved using rule 2 (nil -> .)
    OPTCONDEFFECTS  shift and go to state 26
    ENDOPTIONS      reduce using rule 2 (nil -> .)

  ! ENDOPTIONS      [ reduce using rule 8 (optionlist -> option .) ]

    option                         shift and go to state 24
    optionlist                     shift and go to state 38
    nil                            shift and go to state 25

state 25

    (10) optionlist -> nil .

    ENDOPTIONS      reduce using rule 10 (optionlist -> nil .)


state 26

    (11) option -> OPTCONDEFFECTS . SEMICOLON

    SEMICOLON       shift and go to state 39


state 27

    (5) module -> MODULE automata ENDMODULE .

    OPTIONS         reduce using rule 5 (module -> MODULE automata ENDMODULE .)
    $end            reduce using rule 5 (module -> MODULE automata ENDMODULE .)


state 28

    (24) automata -> state_dec_wrapper cond_dec_wrapper . trel
    (39) trel -> . event boolexp ARROW boolexp SEMICOLON trel
    (40) trel -> . nil
    (41) event -> . OPENLIST CLOSELIST
    (42) event -> . OPENLIST ID CLOSELIST
    (2) nil -> .

    OPENLIST        shift and go to state 31
    ENDMODULE       reduce using rule 2 (nil -> .)

    trel                           shift and go to state 40
    event                          shift and go to state 32
    nil                            shift and go to state 33

state 29

    (25) automata -> state_dec_wrapper trel .

    ENDMODULE       reduce using rule 25 (automata -> state_dec_wrapper trel .)


state 30

    (27) cond_dec_wrapper -> GUARD . COLON OPENLIST cond_dec CLOSELIST SEMICOLON

    COLON           shift and go to state 41


state 31

    (41) event -> OPENLIST . CLOSELIST
    (42) event -> OPENLIST . ID CLOSELIST

    CLOSELIST       shift and go to state 42
    ID              shift and go to state 43


state 32

    (39) trel -> event . boolexp ARROW boolexp SEMICOLON trel
    (43) boolexp -> . boolexp AND boolexp
    (44) boolexp -> . GUARD EQUAL ID
    (45) boolexp -> . GUARD EQUAL INT
    (46) boolexp -> . INT
    (47) boolexp -> . nil
    (2) nil -> .

    GUARD           shift and go to state 45
    INT             shift and go to state 46
    ARROW           reduce using rule 2 (nil -> .)
    AND             reduce using rule 2 (nil -> .)

    boolexp                        shift and go to state 44
    nil                            shift and go to state 47

state 33

    (40) trel -> nil .

    ENDMODULE       reduce using rule 40 (trel -> nil .)


state 34

    (33) state_dec_wrapper -> ST COLON . OPENLIST state_dec CLOSELIST SEMICOLON

    OPENLIST        shift and go to state 48


state 35

    (13) labellist -> cmd COMMA labellist .

    ENDLABELS       reduce using rule 13 (labellist -> cmd COMMA labellist .)


state 36

    (15) cmd -> ID COLON OPENLIST . act_or_pred_list CLOSELIST
    (16) act_or_pred_list -> . act_or_pred
    (17) act_or_pred_list -> . act_or_pred AND act_or_pred_list
    (18) act_or_pred -> . ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (19) act_or_pred -> . PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (20) act_or_pred -> . PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ACTION          shift and go to state 51
    PREDICATE       shift and go to state 52

    act_or_pred_list               shift and go to state 49
    act_or_pred                    shift and go to state 50

state 37

    (6) options -> OPTIONS optionlist ENDOPTIONS .

    $end            reduce using rule 6 (options -> OPTIONS optionlist ENDOPTIONS .)


state 38

    (9) optionlist -> option optionlist .

    ENDOPTIONS      reduce using rule 9 (optionlist -> option optionlist .)


state 39

    (11) option -> OPTCONDEFFECTS SEMICOLON .

    OPTCONDEFFECTS  reduce using rule 11 (option -> OPTCONDEFFECTS SEMICOLON .)
    ENDOPTIONS      reduce using rule 11 (option -> OPTCONDEFFECTS SEMICOLON .)


state 40

    (24) automata -> state_dec_wrapper cond_dec_wrapper trel .

    ENDMODULE       reduce using rule 24 (automata -> state_dec_wrapper cond_dec_wrapper trel .)


state 41

    (27) cond_dec_wrapper -> GUARD COLON . OPENLIST cond_dec CLOSELIST SEMICOLON

    OPENLIST        shift and go to state 53


state 42

    (41) event -> OPENLIST CLOSELIST .

    GUARD           reduce using rule 41 (event -> OPENLIST CLOSELIST .)
    INT             reduce using rule 41 (event -> OPENLIST CLOSELIST .)
    ARROW           reduce using rule 41 (event -> OPENLIST CLOSELIST .)
    AND             reduce using rule 41 (event -> OPENLIST CLOSELIST .)


state 43

    (42) event -> OPENLIST ID . CLOSELIST

    CLOSELIST       shift and go to state 54


state 44

    (39) trel -> event boolexp . ARROW boolexp SEMICOLON trel
    (43) boolexp -> boolexp . AND boolexp

    ARROW           shift and go to state 55
    AND             shift and go to state 56


state 45

    (44) boolexp -> GUARD . EQUAL ID
    (45) boolexp -> GUARD . EQUAL INT

    EQUAL           shift and go to state 57


state 46

    (46) boolexp -> INT .

    ARROW           reduce using rule 46 (boolexp -> INT .)
    AND             reduce using rule 46 (boolexp -> INT .)
    SEMICOLON       reduce using rule 46 (boolexp -> INT .)


state 47

    (47) boolexp -> nil .

    ARROW           reduce using rule 47 (boolexp -> nil .)
    AND             reduce using rule 47 (boolexp -> nil .)
    SEMICOLON       reduce using rule 47 (boolexp -> nil .)


state 48

    (33) state_dec_wrapper -> ST COLON OPENLIST . state_dec CLOSELIST SEMICOLON
    (34) state_dec -> . INT COLON ID
    (35) state_dec -> . INT COLON INIT
    (36) state_dec -> . INT COLON ID COMMA state_dec
    (37) state_dec -> . INT COLON INIT COMMA state_dec
    (38) state_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 59
    CLOSELIST       reduce using rule 2 (nil -> .)

    state_dec                      shift and go to state 58
    nil                            shift and go to state 60

state 49

    (15) cmd -> ID COLON OPENLIST act_or_pred_list . CLOSELIST

    CLOSELIST       shift and go to state 61


state 50

    (16) act_or_pred_list -> act_or_pred .
    (17) act_or_pred_list -> act_or_pred . AND act_or_pred_list

    CLOSELIST       reduce using rule 16 (act_or_pred_list -> act_or_pred .)
    AND             shift and go to state 62


state 51

    (18) act_or_pred -> ACTION . COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 63


state 52

    (19) act_or_pred -> PREDICATE . COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (20) act_or_pred -> PREDICATE . COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 64


state 53

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST . cond_dec CLOSELIST SEMICOLON
    (28) cond_dec -> . INT COLON ID
    (29) cond_dec -> . INT COLON INIT
    (30) cond_dec -> . INT COLON ID COMMA cond_dec
    (31) cond_dec -> . INT COLON INIT COMMA cond_dec
    (32) cond_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 66
    CLOSELIST       reduce using rule 2 (nil -> .)

    cond_dec                       shift and go to state 65
    nil                            shift and go to state 67

state 54

    (42) event -> OPENLIST ID CLOSELIST .

    GUARD           reduce using rule 42 (event -> OPENLIST ID CLOSELIST .)
    INT             reduce using rule 42 (event -> OPENLIST ID CLOSELIST .)
    ARROW           reduce using rule 42 (event -> OPENLIST ID CLOSELIST .)
    AND             reduce using rule 42 (event -> OPENLIST ID CLOSELIST .)


state 55

    (39) trel -> event boolexp ARROW . boolexp SEMICOLON trel
    (43) boolexp -> . boolexp AND boolexp
    (44) boolexp -> . GUARD EQUAL ID
    (45) boolexp -> . GUARD EQUAL INT
    (46) boolexp -> . INT
    (47) boolexp -> . nil
    (2) nil -> .

    GUARD           shift and go to state 45
    INT             shift and go to state 46
    SEMICOLON       reduce using rule 2 (nil -> .)
    AND             reduce using rule 2 (nil -> .)

    boolexp                        shift and go to state 68
    nil                            shift and go to state 47

state 56

    (43) boolexp -> boolexp AND . boolexp
    (43) boolexp -> . boolexp AND boolexp
    (44) boolexp -> . GUARD EQUAL ID
    (45) boolexp -> . GUARD EQUAL INT
    (46) boolexp -> . INT
    (47) boolexp -> . nil
    (2) nil -> .

    GUARD           shift and go to state 45
    INT             shift and go to state 46
    AND             reduce using rule 2 (nil -> .)
    ARROW           reduce using rule 2 (nil -> .)
    SEMICOLON       reduce using rule 2 (nil -> .)

    boolexp                        shift and go to state 69
    nil                            shift and go to state 47

state 57

    (44) boolexp -> GUARD EQUAL . ID
    (45) boolexp -> GUARD EQUAL . INT

    ID              shift and go to state 70
    INT             shift and go to state 71


state 58

    (33) state_dec_wrapper -> ST COLON OPENLIST state_dec . CLOSELIST SEMICOLON

    CLOSELIST       shift and go to state 72


state 59

    (34) state_dec -> INT . COLON ID
    (35) state_dec -> INT . COLON INIT
    (36) state_dec -> INT . COLON ID COMMA state_dec
    (37) state_dec -> INT . COLON INIT COMMA state_dec

    COLON           shift and go to state 73


state 60

    (38) state_dec -> nil .

    CLOSELIST       reduce using rule 38 (state_dec -> nil .)


state 61

    (15) cmd -> ID COLON OPENLIST act_or_pred_list CLOSELIST .

    COMMA           reduce using rule 15 (cmd -> ID COLON OPENLIST act_or_pred_list CLOSELIST .)
    ENDLABELS       reduce using rule 15 (cmd -> ID COLON OPENLIST act_or_pred_list CLOSELIST .)


state 62

    (17) act_or_pred_list -> act_or_pred AND . act_or_pred_list
    (16) act_or_pred_list -> . act_or_pred
    (17) act_or_pred_list -> . act_or_pred AND act_or_pred_list
    (18) act_or_pred -> . ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (19) act_or_pred -> . PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (20) act_or_pred -> . PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ACTION          shift and go to state 51
    PREDICATE       shift and go to state 52

    act_or_pred                    shift and go to state 50
    act_or_pred_list               shift and go to state 74

state 63

    (18) act_or_pred -> ACTION COLON . ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ID              shift and go to state 75


state 64

    (19) act_or_pred -> PREDICATE COLON . ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (20) act_or_pred -> PREDICATE COLON . NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ID              shift and go to state 76
    NOT             shift and go to state 77


state 65

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec . CLOSELIST SEMICOLON

    CLOSELIST       shift and go to state 78


state 66

    (28) cond_dec -> INT . COLON ID
    (29) cond_dec -> INT . COLON INIT
    (30) cond_dec -> INT . COLON ID COMMA cond_dec
    (31) cond_dec -> INT . COLON INIT COMMA cond_dec

    COLON           shift and go to state 79


state 67

    (32) cond_dec -> nil .

    CLOSELIST       reduce using rule 32 (cond_dec -> nil .)


state 68

    (39) trel -> event boolexp ARROW boolexp . SEMICOLON trel
    (43) boolexp -> boolexp . AND boolexp

    SEMICOLON       shift and go to state 80
    AND             shift and go to state 56


state 69

    (43) boolexp -> boolexp AND boolexp .
    (43) boolexp -> boolexp . AND boolexp

  ! shift/reduce conflict for AND resolved as shift
    ARROW           reduce using rule 43 (boolexp -> boolexp AND boolexp .)
    SEMICOLON       reduce using rule 43 (boolexp -> boolexp AND boolexp .)
    AND             shift and go to state 56

  ! AND             [ reduce using rule 43 (boolexp -> boolexp AND boolexp .) ]


state 70

    (44) boolexp -> GUARD EQUAL ID .

    ARROW           reduce using rule 44 (boolexp -> GUARD EQUAL ID .)
    AND             reduce using rule 44 (boolexp -> GUARD EQUAL ID .)
    SEMICOLON       reduce using rule 44 (boolexp -> GUARD EQUAL ID .)


state 71

    (45) boolexp -> GUARD EQUAL INT .

    ARROW           reduce using rule 45 (boolexp -> GUARD EQUAL INT .)
    AND             reduce using rule 45 (boolexp -> GUARD EQUAL INT .)
    SEMICOLON       reduce using rule 45 (boolexp -> GUARD EQUAL INT .)


state 72

    (33) state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST . SEMICOLON

    SEMICOLON       shift and go to state 81


state 73

    (34) state_dec -> INT COLON . ID
    (35) state_dec -> INT COLON . INIT
    (36) state_dec -> INT COLON . ID COMMA state_dec
    (37) state_dec -> INT COLON . INIT COMMA state_dec

    ID              shift and go to state 82
    INIT            shift and go to state 83


state 74

    (17) act_or_pred_list -> act_or_pred AND act_or_pred_list .

    CLOSELIST       reduce using rule 17 (act_or_pred_list -> act_or_pred AND act_or_pred_list .)


state 75

    (18) act_or_pred -> ACTION COLON ID . COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COMMA           shift and go to state 84


state 76

    (19) act_or_pred -> PREDICATE COLON ID . COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COMMA           shift and go to state 85


state 77

    (20) act_or_pred -> PREDICATE COLON NOT . ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ID              shift and go to state 86


state 78

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST . SEMICOLON

    SEMICOLON       shift and go to state 87


state 79

    (28) cond_dec -> INT COLON . ID
    (29) cond_dec -> INT COLON . INIT
    (30) cond_dec -> INT COLON . ID COMMA cond_dec
    (31) cond_dec -> INT COLON . INIT COMMA cond_dec

    ID              shift and go to state 88
    INIT            shift and go to state 89


state 80

    (39) trel -> event boolexp ARROW boolexp SEMICOLON . trel
    (39) trel -> . event boolexp ARROW boolexp SEMICOLON trel
    (40) trel -> . nil
    (41) event -> . OPENLIST CLOSELIST
    (42) event -> . OPENLIST ID CLOSELIST
    (2) nil -> .

    OPENLIST        shift and go to state 31
    ENDMODULE       reduce using rule 2 (nil -> .)

    event                          shift and go to state 32
    trel                           shift and go to state 90
    nil                            shift and go to state 33

state 81

    (33) state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .

    GUARD           reduce using rule 33 (state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .)
    OPENLIST        reduce using rule 33 (state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .)
    ENDMODULE       reduce using rule 33 (state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .)


state 82

    (34) state_dec -> INT COLON ID .
    (36) state_dec -> INT COLON ID . COMMA state_dec

    CLOSELIST       reduce using rule 34 (state_dec -> INT COLON ID .)
    COMMA           shift and go to state 91


state 83

    (35) state_dec -> INT COLON INIT .
    (37) state_dec -> INT COLON INIT . COMMA state_dec

    CLOSELIST       reduce using rule 35 (state_dec -> INT COLON INIT .)
    COMMA           shift and go to state 92


state 84

    (18) act_or_pred -> ACTION COLON ID COMMA . PARAMS COLON OPENLIST param_dec CLOSELIST

    PARAMS          shift and go to state 93


state 85

    (19) act_or_pred -> PREDICATE COLON ID COMMA . PARAMS COLON OPENLIST param_dec CLOSELIST

    PARAMS          shift and go to state 94


state 86

    (20) act_or_pred -> PREDICATE COLON NOT ID . COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COMMA           shift and go to state 95


state 87

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON .

    OPENLIST        reduce using rule 27 (cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON .)
    ENDMODULE       reduce using rule 27 (cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON .)


state 88

    (28) cond_dec -> INT COLON ID .
    (30) cond_dec -> INT COLON ID . COMMA cond_dec

    CLOSELIST       reduce using rule 28 (cond_dec -> INT COLON ID .)
    COMMA           shift and go to state 96


state 89

    (29) cond_dec -> INT COLON INIT .
    (31) cond_dec -> INT COLON INIT . COMMA cond_dec

    CLOSELIST       reduce using rule 29 (cond_dec -> INT COLON INIT .)
    COMMA           shift and go to state 97


state 90

    (39) trel -> event boolexp ARROW boolexp SEMICOLON trel .

    ENDMODULE       reduce using rule 39 (trel -> event boolexp ARROW boolexp SEMICOLON trel .)


state 91

    (36) state_dec -> INT COLON ID COMMA . state_dec
    (34) state_dec -> . INT COLON ID
    (35) state_dec -> . INT COLON INIT
    (36) state_dec -> . INT COLON ID COMMA state_dec
    (37) state_dec -> . INT COLON INIT COMMA state_dec
    (38) state_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 59
    CLOSELIST       reduce using rule 2 (nil -> .)

    state_dec                      shift and go to state 98
    nil                            shift and go to state 60

state 92

    (37) state_dec -> INT COLON INIT COMMA . state_dec
    (34) state_dec -> . INT COLON ID
    (35) state_dec -> . INT COLON INIT
    (36) state_dec -> . INT COLON ID COMMA state_dec
    (37) state_dec -> . INT COLON INIT COMMA state_dec
    (38) state_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 59
    CLOSELIST       reduce using rule 2 (nil -> .)

    state_dec                      shift and go to state 99
    nil                            shift and go to state 60

state 93

    (18) act_or_pred -> ACTION COLON ID COMMA PARAMS . COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 100


state 94

    (19) act_or_pred -> PREDICATE COLON ID COMMA PARAMS . COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 101


state 95

    (20) act_or_pred -> PREDICATE COLON NOT ID COMMA . PARAMS COLON OPENLIST param_dec CLOSELIST

    PARAMS          shift and go to state 102


state 96

    (30) cond_dec -> INT COLON ID COMMA . cond_dec
    (28) cond_dec -> . INT COLON ID
    (29) cond_dec -> . INT COLON INIT
    (30) cond_dec -> . INT COLON ID COMMA cond_dec
    (31) cond_dec -> . INT COLON INIT COMMA cond_dec
    (32) cond_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 66
    CLOSELIST       reduce using rule 2 (nil -> .)

    cond_dec                       shift and go to state 103
    nil                            shift and go to state 67

state 97

    (31) cond_dec -> INT COLON INIT COMMA . cond_dec
    (28) cond_dec -> . INT COLON ID
    (29) cond_dec -> . INT COLON INIT
    (30) cond_dec -> . INT COLON ID COMMA cond_dec
    (31) cond_dec -> . INT COLON INIT COMMA cond_dec
    (32) cond_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 66
    CLOSELIST       reduce using rule 2 (nil -> .)

    cond_dec                       shift and go to state 104
    nil                            shift and go to state 67

state 98

    (36) state_dec -> INT COLON ID COMMA state_dec .

    CLOSELIST       reduce using rule 36 (state_dec -> INT COLON ID COMMA state_dec .)


state 99

    (37) state_dec -> INT COLON INIT COMMA state_dec .

    CLOSELIST       reduce using rule 37 (state_dec -> INT COLON INIT COMMA state_dec .)


state 100

    (18) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON . OPENLIST param_dec CLOSELIST

    OPENLIST        shift and go to state 105


state 101

    (19) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON . OPENLIST param_dec CLOSELIST

    OPENLIST        shift and go to state 106


state 102

    (20) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS . COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 107


state 103

    (30) cond_dec -> INT COLON ID COMMA cond_dec .

    CLOSELIST       reduce using rule 30 (cond_dec -> INT COLON ID COMMA cond_dec .)


state 104

    (31) cond_dec -> INT COLON INIT COMMA cond_dec .

    CLOSELIST       reduce using rule 31 (cond_dec -> INT COLON INIT COMMA cond_dec .)


state 105

    (18) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST . param_dec CLOSELIST
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .

    ID              shift and go to state 108
    CLOSELIST       reduce using rule 2 (nil -> .)

    param_dec                      shift and go to state 109
    nil                            shift and go to state 110

state 106

    (19) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST . param_dec CLOSELIST
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .

    ID              shift and go to state 108
    CLOSELIST       reduce using rule 2 (nil -> .)

    param_dec                      shift and go to state 111
    nil                            shift and go to state 110

state 107

    (20) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON . OPENLIST param_dec CLOSELIST

    OPENLIST        shift and go to state 112


state 108

    (21) param_dec -> ID .
    (22) param_dec -> ID . COMMA param_dec

    CLOSELIST       reduce using rule 21 (param_dec -> ID .)
    COMMA           shift and go to state 113


state 109

    (18) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec . CLOSELIST

    CLOSELIST       shift and go to state 114


state 110

    (23) param_dec -> nil .

    CLOSELIST       reduce using rule 23 (param_dec -> nil .)


state 111

    (19) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec . CLOSELIST

    CLOSELIST       shift and go to state 115


state 112

    (20) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST . param_dec CLOSELIST
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .
